--- a/package.json
+++ b/package.json
@@ -14,12 +14,19 @@
     "@fastify/cors": "^11.0.1",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
+    "@scalar/fastify-api-reference": "^1.31.17",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.44.2",
     "fastify": "^5.4.0",
     "fastify-type-provider-zod": "^5.0.1",
+    "pg": "^8.16.2",
     "zod": "^3.25.64"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
+    "@biomejs/biome": "2.0.2",
+    "@types/pg": "^8.15.4",
+    "drizzle-kit": "^0.31.1",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
